--- a/site/davidstyle.css
+++ b/site/davidstyle.css
@@ -27,5 +27,10 @@ body{
 a:hover{
 	color: #2DE05B;
 }
-
+#dish{
+	float: left;
+	margin-right: 50px;
+	
+	border: 20px 20px 20px 20px solid black;
+	border-color: pink;
 }
