--- a/site/sus.css
+++ b/site/sus.css
@@ -56,9 +56,12 @@ body{
 	margin: 50px;
 	font-weight: 1em; 
 	color: red;
-	margin-top: 80px;
-	background: url(https://scontent.fslv1-1.fna.fbcdn.net/v/t1.0-9/18527765_645223935669071_1671522466841979063_n.png?_nc_cat=105&_nc_oc=AQmB1V86Vn96y9xMNp0qL4DNge5Bm5FQFQNHBoKGuwvq9cNBkhuI09ubs6tATunMiZD8XMhXoZRWkbyMSFXSCekT&_nc_ht=scontent.fslv1-1.fna&oh=2d432c4de2a987ef47afbe649e586348&oe=5DAE44DE);
-}
+	clear: left;
+  background: url(steth.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+
+	}
 #h1{
 	margin-left: 20px;
 	margin-right: 20px;
@@ -71,8 +74,32 @@ body{
 #but{
 	float: left;
 	margin-top: 10px;
+	
+}
+#boxes{
+  background-color: blue;
+  height: 140px;
+  width: 200px;
+  margin-left: 10%;
+  margin-top: 2%;
+  float: left;
+  border-color: green;
+  border-width: 6px;
+}
+#doc-img{
+  float: left;
+  margin-left: 40px;
+  margin-right: 20px;
+
 }
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
-}
+  }
+  @media (max-width: 400px){
+    .rescon{
+    
+    display: none;
+  }
+
+  }
