--- a/site/zb.css
+++ b/site/zb.css
@@ -74,7 +74,7 @@
 	padding-right: 20%;
 }
 
-@media screen and (max-width: 300px)
+@media screen and (max-width: 600px)
 {
 	#navhead
 	{
@@ -94,6 +94,7 @@
 		height: 20%px;
 		width: 30%px;
 		float: right;
+    display: none;
 	}
 }
 
