--- a/site/contact.css
+++ b/site/contact.css
@@ -8,10 +8,19 @@ input[type=text]
 body{
 	background-color: 
 }
+	#bodyact{
+		background: url(bggg.jpg);
+		background-repeat: no-repeat; 
+		background-attachment: fixed; 
+  background-size: 100% 100%;
+		width: auto; 
+		height: 100%;
+	}	
 #navbb
 {
 	background-color: #3EDC66;
 	margin-top: -2%;
+ width: 100%;
 
 }
 #navhead{
@@ -81,7 +90,7 @@ body{
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
-@media screen and (max-width: 600px)
+@media screen and (max-width: 600px) and (max-height: 600px)
 {
 	#navhead
 	{
@@ -110,6 +119,23 @@ body{
 	margin-top: 80%;
 	clear: right;
 	}
+	#bodyact{
+		background: url(bggg.jpg);
+		background-repeat: no-repeat; 
+		background-attachment: fixed; 
+		width: auto; 
+		height: 100%;
+	}
+ #navbb
+{
+ background-color: #3EDC66;
+ margin-top: -2%;
+ width: 100%;
+
+}
+.navbar{
+ position: fixed;
+}
 
 }
 #map {
