--- a/site/contact.css
+++ b/site/contact.css
@@ -9,7 +9,7 @@ body{
 	background-color: 
 }
 	#bodyact{
-		background: url(bggg.jpg);
+		background: url(b.jpg);
 		background-repeat: no-repeat; 
 		background-attachment: fixed; 
   background-size: 100% 100%;
@@ -120,9 +120,10 @@ body{
 	clear: right;
 	}
 	#bodyact{
-		background: url(bggg.jpg);
+		background: url(images.jpg);
 		background-repeat: no-repeat; 
 		background-attachment: fixed; 
+  bac
 		width: auto; 
 		height: 100%;
 	}
