--- a/site/sush.css
+++ b/site/sush.css
@@ -8,6 +8,9 @@
 	font-size: 40px;
 	text-align: center;
 	text-shadow: 2px 2px white;
+	width: 100%;
+	background-color: #8D47C4;
+	position: fixed;
 	
 }
 .button {
@@ -25,7 +28,7 @@
   cursor: pointer;
 }
 .button1 {
-  background-color: white; 
+  background-color: #6EECBE; 
   color: black; 
   border: 2px solid #4CAF50;
 }
@@ -35,28 +38,42 @@
   color: white;
 }
 body{
-	background-color: #BEC8C2;
+	background-color: white;
+}
+#hh{
+	font-size: 40px;
+	background: url(bg1.jpg);
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 500px;
+
 }
 #mainphoto{
 	float: left;
 	margin-right: 20px;
+	margin-left: 60px;
+	margin-top: 40px;
 }
 #introtext{
 	padding-top: 20px;
 	margin-right: 20px;
-	padding-left: 20px;
+	padding-left: 50px;
+	padding-right: 5-px;
 	height: 526px;
+	margin-left: 50px;
+	padding-right: 100px;
 	margin-bottom: 10px;
+	padding-top: 170px;
 }
 #buttonid{
-	margin-right: 10%;
+	margin-right: 6%;
 }
 #choose{
 	
 	margin-left: 30%; 
 }
 #headbutton{
-	background-color: #4CAF50; 
+	background-color: #098772; 
 	border-radius: 30%;
 	width: 70%; 
 	border: 2px solid black;
@@ -65,8 +82,19 @@ body{
 #contentboxx{
 	float: left;
 	width: 25%;
-	background-color: #4CAF50;
+	background-color: #8D47C4;
 	margin-right: 1%;
 	margin-left: 3%;
 	margin-top: 5%;
 }
+#foot{
+	height: 200px;
+	background-color: black;
+	margin-top: 600px;
+}
+#map{
+	height: 20%px;
+	width: 30%px;
+	float: right;
+    display: none;
+	}
